src/test/deca/context/invalid/pierre/objects/leftOfDotNotClass.deca
class A {
    int a;
}
{
    int a;
    a.a = 1;
}
